  * Add new dpkg-shlibdeps -l option to add private shared library directories.
    This should be used instead of abusing LD_LIBRARY_PATH to pass the paths,
    which might be problematic when cross-compiling. Closes: #698881
  * Only apply empy line and comma cleanups when doing substvar replacements
    on fields where those are relevant. Closes: #659814

  [ Raphaël Hertzog ]
  * Fix dpkg-maintscript-helper rm_conffile and mv_conffile to do nothing
    when the conffile is no longer owned by the current (or named) package.
    Thanks to Steve Langasek for the patch. Closes: #716948
  * Improve dpkg-maintscript-helper behaviour in “Multi-Arch: same” packages
    by arch-qualifying package names read from the environment. Also add
    a warning about this potential problem in the manual page.
  * Fix usage of non-existent _() function in multiple places of the Perl
    code. Thanks to Lincoln Myers <lincoln@netapp.com> for the patch.
    Closes: #708607

  [ Updated programs translations ]
  * Fix typo in Spanish translation of update-alternatives.
    Thanks to Javier Fernandez-Sanguino <jfs@debian.org>. Closes: #713020

  [ Updated programs translations ]
  * Vietnamese (Trần Ngọc Quân). Closes: #715334

  [ Added man page translations ]
  * Italian (Beatrice Torracca). Closes: #711647

  [ Updated man page translations ]
  * Fix wrong translation of "fortify" in French dpkg-buildflags(1) man page.
    Thanks to Christian Perrier <bubulle@debian.org>. Closes: #712976
  * Fix typo in dpkg-source(1) man page French translation.
    Thanks to Cédric Boutillier <boutil@debian.org>. Closes: #708292
  * Japanese (TAKAHASHI Motonobu). Closes: #704240

 -- Guillem Jover <guillem@debian.org>  Fri, 03 Aug 2012 13:21:00 +0200

dpkg (1.16.10) unstable; urgency=low

  [ Guillem Jover ]
  * Fix typos in 1.16.9 changelog entry. Closes: #691954
    Thanks to Nicolás Alvarez <nicolas.alvarez@gmail.com>.
  * Add missing @LIBLZMA_LIBS@ to Libs.Private in libdpkg.pc.in.