@@ -140,6 +140,7 @@ dpkg (1.17.0) UNRELEASED; urgency=low
     which might be problematic when cross-compiling. Closes: #698881
   * Only apply empy line and comma cleanups when doing substvar replacements
     on fields where those are relevant. Closes: #659814
+  * Do not scan control files twice for PGP signature presence.
 
   [ Raphaël Hertzog ]
   * Fix dpkg-maintscript-helper rm_conffile and mv_conffile to do nothing
